Fix for right push menu overflow issue

--- a/src/sass/navigation--push-nav.scss
+++ b/src/sass/navigation--push-nav.scss
@@ -18,17 +18,17 @@ $mask--background: rgba(255, 255, 255, 0.5);
 }
 #pushed-content.nav-panel--push-left.nav-panel--primary-is-active {
   transform: translate3D(-$panel--width, 0, 0);
-  box-shadow: 2px 0 2px rgba(0, 0, 0, .15);
+  //box-shadow: 2px 0 2px rgba(0, 0, 0, .15);
 }
 #pushed-content.nav-panel--push-right.nav-panel--primary-is-active {
   transform: translate3D($panel--width, 0, 0);
-  box-shadow: 2px 0 2px rgba(0, 0, 0, .15);
+  //box-shadow: 2px 0 2px rgba(0, 0, 0, .15);
 }
 #nav-panel--primary {
   transition: transform $transition-speed $transition-easing, visibility $transition-speed $transition-easing;
   visibility: visible;
   height: 100% !important;
-  width: $panel--width;
+  width: 0;
   position: fixed;
   top: 0;
   background-color: $panel--background;
@@ -43,13 +43,11 @@ $mask--background: rgba(255, 255, 255, 0.5);
   left: 0;
   transform: translate3D(-$panel--width, 0, 0);
 }
-#nav-panel--primary.nav-panel--push-left.nav-panel--primary-is-active {
-  transform: translate3D(0, 0, 0);
-  z-index: $panel--z-index;
-}
+#nav-panel--primary.nav-panel--push-left.nav-panel--primary-is-active,
 #nav-panel--primary.nav-panel--push-right.nav-panel--primary-is-active {
   transform: translate3D(0, 0, 0);
   z-index: $panel--z-index;
+  width: $panel--width;
 }
 .push-nav--inner {
   overflow-x: scroll;
